// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Initial Form Data with "" 1`] = `
[
  <div
    className="type"
  >
    WEB
  </div>,
  <div
    className="reloading"
  >
    
  </div>,
  <div
    className="servlet"
  >
    
  </div>,
  <div
    className="gorm"
  >
    
  </div>,
  <div
    className="javaVersion"
  >
    
  </div>,
  <div
    className="name"
  >
    demo
  </div>,
  <div
    className="package"
  >
    com.example
  </div>,
]
`;

exports[`Initial Form Data with "gorm" 1`] = `
[
  <div
    className="type"
  >
    WEB
  </div>,
  <div
    className="reloading"
  >
    
  </div>,
  <div
    className="servlet"
  >
    
  </div>,
  <div
    className="gorm"
  >
    gorm-hibernate5
  </div>,
  <div
    className="javaVersion"
  >
    
  </div>,
  <div
    className="name"
  >
    demo
  </div>,
  <div
    className="package"
  >
    com.example
  </div>,
]
`;

exports[`Initial Form Data with "javaVersion" 1`] = `
[
  <div
    className="type"
  >
    WEB
  </div>,
  <div
    className="reloading"
  >
    
  </div>,
  <div
    className="servlet"
  >
    
  </div>,
  <div
    className="gorm"
  >
    
  </div>,
  <div
    className="javaVersion"
  >
    JDK_11
  </div>,
  <div
    className="name"
  >
    demo
  </div>,
  <div
    className="package"
  >
    com.example
  </div>,
]
`;

exports[`Initial Form Data with "name" 1`] = `
[
  <div
    className="type"
  >
    WEB
  </div>,
  <div
    className="reloading"
  >
    
  </div>,
  <div
    className="servlet"
  >
    
  </div>,
  <div
    className="gorm"
  >
    
  </div>,
  <div
    className="javaVersion"
  >
    
  </div>,
  <div
    className="name"
  >
    pretendo
  </div>,
  <div
    className="package"
  >
    com.example
  </div>,
]
`;

exports[`Initial Form Data with "package" 1`] = `
[
  <div
    className="type"
  >
    WEB
  </div>,
  <div
    className="reloading"
  >
    
  </div>,
  <div
    className="servlet"
  >
    
  </div>,
  <div
    className="gorm"
  >
    
  </div>,
  <div
    className="javaVersion"
  >
    
  </div>,
  <div
    className="name"
  >
    demo
  </div>,
  <div
    className="package"
  >
    com.pretend
  </div>,
]
`;

exports[`Initial Form Data with "reloading" 1`] = `
[
  <div
    className="type"
  >
    WEB
  </div>,
  <div
    className="reloading"
  >
    JREBEL
  </div>,
  <div
    className="servlet"
  >
    
  </div>,
  <div
    className="gorm"
  >
    
  </div>,
  <div
    className="javaVersion"
  >
    
  </div>,
  <div
    className="name"
  >
    demo
  </div>,
  <div
    className="package"
  >
    com.example
  </div>,
]
`;

exports[`Initial Form Data with "reloading" 2`] = `
[
  <div
    className="type"
  >
    WEB
  </div>,
  <div
    className="reloading"
  >
    DEVTOOLS
  </div>,
  <div
    className="servlet"
  >
    
  </div>,
  <div
    className="gorm"
  >
    
  </div>,
  <div
    className="javaVersion"
  >
    
  </div>,
  <div
    className="name"
  >
    demo
  </div>,
  <div
    className="package"
  >
    com.example
  </div>,
]
`;

exports[`Initial Form Data with "servlet" 1`] = `
[
  <div
    className="type"
  >
    WEB
  </div>,
  <div
    className="reloading"
  >
    
  </div>,
  <div
    className="servlet"
  >
    spring-boot-starter-tomcat
  </div>,
  <div
    className="gorm"
  >
    
  </div>,
  <div
    className="javaVersion"
  >
    
  </div>,
  <div
    className="name"
  >
    demo
  </div>,
  <div
    className="package"
  >
    com.example
  </div>,
]
`;

exports[`Initial Form Data with "servlet" 2`] = `
[
  <div
    className="type"
  >
    WEB
  </div>,
  <div
    className="reloading"
  >
    
  </div>,
  <div
    className="servlet"
  >
    NONE
  </div>,
  <div
    className="gorm"
  >
    
  </div>,
  <div
    className="javaVersion"
  >
    
  </div>,
  <div
    className="name"
  >
    demo
  </div>,
  <div
    className="package"
  >
    com.example
  </div>,
]
`;
